# ownyou-consumer-application

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  AUTH_TEST_SUMMARY.md  CLAUDE.md  EVIDENCE_JUDGE_FIX.md  MANIFEST.in  PRODUCTION_SETUP.md  QUICKSTART.md  README.md  TRIGGER_ENGINE_TEST_PROCEDURE.md  TRIGGER_ENGINE_TEST_REPORT.md  TRIGGER_ENGINE_TEST_SUMMARY.md  email_parser_workspace.code-workspace  langgraph.json  package.json  pnpm-workspace.yaml  pyproject.toml  setup.py  test-auth-detailed.js  test-auth-persistence.mjs  test-auth-workflow.js  token.pickle  tsconfig.base.json  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.review-output/: CODE_REVIEW_REPORT.md
.specstory/: .project.json
_archive/: AGENT_CONVERSION_MASTER_PLAN.md  AGENT_QUALITY_IMPROVEMENT_SPEC.md  AGENT_TESTING_PLAN.md  BATCH_EVIDENCE_JUDGE_SPEC.md  BATCH_PROCESSING_REQUIREMENTS.md  END_TO_END_TAXONOMY_WORKFLOW.md  FUTURE_ANALYZERS.md  IAB_TAXONOMY_PROFILE_REQUIREMENTS.md  PHASE3_TESTING_RESULTS.md  README.md  browser_extension_chrome_requirement1.0.md  evidence_visibility_requirements.md
apps/consumer/src-tauri/: Cargo.toml  tauri.conf.json
apps/consumer/src-tauri/capabilities/: default.json
apps/consumer/src-tauri/src/: lib.rs  main.rs  oauth.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  oauth.rs
browser-extension/: AZURE_CORS_ISSUE.md  IMPLEMENTATION_SUCCESS.md  README.md  TESTING.md  background.js  bridge.js  content.js  manifest.json  package.json  popup.html  popup.js  test-extension-status.md  verify-tokens.js
ceramic-research/: CERAMIC_DECISION_FINAL.md  CERAMIC_VS_GUN_ARCHITECTURE_EXPLAINED.md  FINAL_COMPARISON_ALL_TECHNOLOGIES.md  FINDINGS.md  GUN_VS_CERAMIC_COMPARISON.md  README.md  WHY_CERAMIC_AND_ALTERNATIVES.md  deploy-model-sdk.ts  deploy-model.ts  package.json  test-connection.ts  tsconfig.json
consumer_profiles/: metadata.json
dashboard/: DASHBOARD_QUICKSTART.md  IMPLEMENTATION_STATUS.md  PROGRESS_SUMMARY.md  QUICKSTART.md  STATUS.md  TEST_RESULTS.md  TROUBLESHOOTING.md
docs/: Classification1.0.md  DEFERRED.md  DISCRETE_STEPS_PROGRESS.md  PHASE2_DISCRETE_STEP2_REQUIREMENTS.md  STUDIO_QUICKSTART.md
ikigai_insights/: holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250902_115209.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250925_182155.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250926_070900.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250926_084621.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250926_085712.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250926_092644.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250926_093859.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250926_095647.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250926_101946.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250926_102612.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250926_110732.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250926_113610.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250926_123753.json  holistic_ikigai_emails_processed.csv_holistic_ikigai_report_20250926_142222.json  ikigai_emails_processed.csv_ikigai_final_report_20250902_114942.json  ikigai_emails_processed.csv_ikigai_final_report_20250925_180335.json  ikigai_emails_processed.csv_ikigai_final_report_20250925_181927.json  ikigai_emails_processed.csv_ikigai_final_report_20250926_070714.json  ikigai_emails_processed.csv_ikigai_final_report_20250926_084418.json  ikigai_emails_processed.csv_ikigai_final_report_20250926_085632.json  ikigai_emails_processed.csv_ikigai_final_report_20250926_092512.json  ikigai_emails_processed.csv_ikigai_final_report_20250926_093716.json  ikigai_emails_processed.csv_ikigai_final_report_20250926_095244.json  ikigai_emails_processed.csv_ikigai_final_report_20250926_101759.json  ikigai_emails_processed.csv_ikigai_final_report_20250926_102348.json  ikigai_emails_processed.csv_ikigai_final_report_20250926_110535.json  ikigai_emails_processed.csv_ikigai_final_report_20250926_113308.json  ikigai_emails_processed.csv_ikigai_final_report_20250926_122140.json  ikigai_emails_processed.csv_ikigai_final_report_20250926_142031.json  ikigai_emails_processed.csv_ikigai_final_report_20250929_083907.json  marketing_analysis.csv_ikigai_final_report_20250926_111736.json  marketing_emails_processed.csv_ikigai_final_report_20250902_114923.json  marketing_emails_processed.csv_ikigai_final_report_20250925_180312.json  marketing_emails_processed.csv_ikigai_final_report_20250925_181840.json  (+12 more)
research_spike/: FINAL_REPORT.md  README.md  (+4 more)
(+992 files in other folders)
