[package]
name = "ownyou"
version = "0.1.0"
description = "OwnYou - Privacy-first personal AI"
authors = ["OwnYou Team"]
license = "MIT"
repository = "https://github.com/nlongcn/ownyou_consumer_application"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ownyou_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"

# OAuth dependencies (for Rust-based token exchange to avoid CORS)
oauth2 = { version = "4.4", features = ["reqwest"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-http = "2"
